--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <p id="final-text" class="final-text" style="display: none">
-          <strong>You are my Valentine:</strong> You would never have another option <3
+          <strong>You are my Valentine:</strong> You would never have another option : )
         </p>
       </div>
     </div>
